...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HNk-EE-oBC">
                                                        <rect key="frame" x="0.0" y="0.0" width="80" height="40"/>
                                                        <color key="backgroundColor" red="0.85329025979999995" green="0.52307236189999995" blue="0.32504320139999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="SKs-fY-Hwg"/>
                                                        </constraints>
                                                        <state key="normal" title="RxSwift">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="color" keyPath="layer.shadowUIColor">
                                                                <color key="value" red="0.47407394650000001" green="0.19813698530000001" blue="0.43923455480000001" alpha="0.34735207480000002" colorSpace="custom" customColorSpace="displayP3"/>
                                                            </userDefinedRuntimeAttribute>
...
                                                        <rect key="frame" x="120" y="0.0" width="80" height="40"/>
                                                        <color key="backgroundColor" red="0.25155821439999998" green="0.35469755530000002" blue="0.47452628610000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="3al-s9-LPa"/>
                                                            <constraint firstAttribute="height" constant="40" id="llc-Pg-k6O"/>
                                                        </constraints>
                                                        <state key="normal" title="权限封装">
                                                            <color key="titleColor" red="0.99999719860000003" green="0.9999815822" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="color" keyPath="layer.shadowUIColor">
                                                                <color key="value" red="0.47407394650000001" green="0.19813698530000001" blue="0.43923455480000001" alpha="0.34735207480000002" colorSpace="custom" customColorSpace="displayP3"/>
                                                            </userDefinedRuntimeAttribute>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFJ-vg-78f">
                                                        <rect key="frame" x="240" y="0.0" width="80" height="40"/>
                                                        <color key="backgroundColor" red="0.65555753409999995" green="0.30826395919999999" blue="0.3737284072" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="jWT-wW-ToB"/>
                                                        </constraints>
                                                        <state key="normal" title="动画">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                <real key="value" value="2"/>
                                                            </userDefinedRuntimeAttribute>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="77E-As-d9Q">
                                <rect key="frame" x="160" y="243" width="80" height="40"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.65555753409999995" green="0.30826395919999999" blue="0.3737284072" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="加载动画">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="2"/>
                                    </userDefinedRuntimeAttribute>
...
